// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`есть марка должен отрисовать логотип, марку на первой строке, категорию и параметры на второй строке 1`] = `
<div
  className="SearchLineSuggestItem"
  onClick={[Function]}
>
  <div
    className="SearchLineSuggestItem__left"
  >
    <div
      className="SearchLineSuggestItem__marklogoContainer"
    >
      <img
        className="SearchLineSuggestItem__marklogo"
        src="//avatars.mds.yandex.net/get-verba/997355/2a000001651f4baeb0ee7d9d292ce0db5e9a/logo"
      />
    </div>
  </div>
  <div
    className="SearchLineSuggestItem__right"
  >
    <div
      className="SearchLineSuggestItem__title"
    >
      Audi
    </div>
    <div
      className="SearchLineSuggestItem__text"
    >
      <div
        className="SearchLineSuggestItem__categoryName"
      >
        Автомобили
      </div>
      <div
        className="SearchLineSuggestItem__params"
      >
        Цена: до 500 000 ₽
      </div>
    </div>
  </div>
</div>
`;

exports[`есть марка должен отрисовать логотип, марку на первой строке, категорию на второй строке 1`] = `
<div
  className="SearchLineSuggestItem"
  onClick={[Function]}
>
  <div
    className="SearchLineSuggestItem__left"
  >
    <div
      className="SearchLineSuggestItem__marklogoContainer"
    >
      <img
        className="SearchLineSuggestItem__marklogo"
        src="//avatars.mds.yandex.net/get-verba/997355/2a000001651f4baeb0ee7d9d292ce0db5e9a/logo"
      />
    </div>
  </div>
  <div
    className="SearchLineSuggestItem__right"
  >
    <div
      className="SearchLineSuggestItem__title"
    >
      Audi
    </div>
    <div
      className="SearchLineSuggestItem__text"
    >
      <div
        className="SearchLineSuggestItem__categoryName"
      >
        Автомобили
      </div>
    </div>
  </div>
</div>
`;

exports[`есть марка должен отрисовать логотип, марку на первой строке, категорию, параметры и город на второй строке 1`] = `
<div
  className="SearchLineSuggestItem"
  onClick={[Function]}
>
  <div
    className="SearchLineSuggestItem__left"
  >
    <div
      className="SearchLineSuggestItem__marklogoContainer"
    >
      <img
        className="SearchLineSuggestItem__marklogo"
        src="//avatars.mds.yandex.net/get-verba/997355/2a000001651f4baeb0ee7d9d292ce0db5e9a/logo"
      />
    </div>
  </div>
  <div
    className="SearchLineSuggestItem__right"
  >
    <div
      className="SearchLineSuggestItem__title"
    >
      Audi
    </div>
    <div
      className="SearchLineSuggestItem__text"
    >
      <div
        className="SearchLineSuggestItem__categoryName"
      >
        Автомобили
      </div>
      <div
        className="SearchLineSuggestItem__params"
      >
        Самара; Цена: до 500 000 ₽
      </div>
    </div>
  </div>
</div>
`;

exports[`нет марки должен отрисовать логотип категории, название категории в одну строку, если нет параметров 1`] = `
<div
  className="SearchLineSuggestItem"
  onClick={[Function]}
>
  <div
    className="SearchLineSuggestItem__left"
  >
    <div
      className="SearchLineSuggestItem__marklogoContainer"
    >
      <IconSvg
        className="SearchLineSuggestItem__categoryIcon"
        id="svgID"
        size="24"
      />
    </div>
  </div>
  <div
    className="SearchLineSuggestItem__right"
  >
    <div
      className="SearchLineSuggestItem__title"
    >
      Автомобили
    </div>
  </div>
</div>
`;

exports[`нет марки должен отрисовать логотип категории, название категории на первой строке, параметры и город на второй строке 1`] = `
<div
  className="SearchLineSuggestItem"
  onClick={[Function]}
>
  <div
    className="SearchLineSuggestItem__left"
  >
    <div
      className="SearchLineSuggestItem__marklogoContainer"
    >
      <img
        className="SearchLineSuggestItem__marklogo"
        src="//avatars.mds.yandex.net/get-verba/997355/2a000001651f4baeb0ee7d9d292ce0db5e9a/logo"
      />
    </div>
  </div>
  <div
    className="SearchLineSuggestItem__right"
  >
    <div
      className="SearchLineSuggestItem__title"
    >
      Audi
    </div>
    <div
      className="SearchLineSuggestItem__text"
    >
      <div
        className="SearchLineSuggestItem__categoryName"
      >
        Автомобили
      </div>
      <div
        className="SearchLineSuggestItem__params"
      >
        Самара; Цена: до 500 000 ₽
      </div>
    </div>
  </div>
</div>
`;

exports[`нет марки должен отрисовать логотип категории, название категории на первой строке, параметры на второй строке 1`] = `
<div
  className="SearchLineSuggestItem"
  onClick={[Function]}
>
  <div
    className="SearchLineSuggestItem__left"
  >
    <div
      className="SearchLineSuggestItem__marklogoContainer"
    >
      <IconSvg
        className="SearchLineSuggestItem__categoryIcon"
        id="svgID"
        size="24"
      />
    </div>
  </div>
  <div
    className="SearchLineSuggestItem__right"
  >
    <div
      className="SearchLineSuggestItem__title"
    >
      Автомобили
    </div>
    <div
      className="SearchLineSuggestItem__text"
    >
      <div
        className="SearchLineSuggestItem__params"
      >
        Цена: до 500 000 ₽
      </div>
    </div>
  </div>
</div>
`;
